// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pos-logic Case 17: refund order 1`] = `
Object {
  "_id": "ObjectID",
  "appType": "POS_RESTAURANT",
  "cancellationItems": Array [],
  "cashback": 0,
  "items": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "",
      "id": 1,
      "name": "Cola",
      "price": 98,
      "quantity": 1,
      "tax": 19,
      "taxes": Array [
        19,
        null,
      ],
      "vSum": 98,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 98,
          "net": 82.35,
          "tax": 15.65,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "",
      "id": 2,
      "name": "Pepsi",
      "price": 35,
      "quantity": 1,
      "tax": 0,
      "taxes": Array [
        0,
        null,
      ],
      "vSum": 35,
      "vTakeAway": false,
      "vTaxSum": Object {
        "0": Object {
          "gross": 35,
          "net": 35,
          "tax": 0,
        },
      },
    },
  ],
  "payment": Array [],
  "status": "inProgress",
  "table": "10",
  "takeAway": false,
  "tip": 0,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vSum": 133,
  "vTaxSum": Object {
    "0": Object {
      "gross": 35,
      "net": 35,
      "tax": 0,
    },
    "19": Object {
      "gross": 98,
      "net": 82.35,
      "tax": 15.65,
    },
  },
}
`;

exports[`pos-logic Case 17: refund order 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "cancellationItems": Array [],
    "cashback": 0,
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "",
        "id": 1,
        "name": "Cola",
        "price": 98,
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          null,
        ],
        "vSum": 98,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 98,
            "net": 82.35,
            "tax": 15.65,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "",
        "id": 2,
        "name": "Pepsi",
        "price": 35,
        "quantity": 1,
        "tax": 0,
        "taxes": Array [
          0,
          null,
        ],
        "vSum": 35,
        "vTakeAway": false,
        "vTaxSum": Object {
          "0": Object {
            "gross": 35,
            "net": 35,
            "tax": 0,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 133,
    "vTaxSum": Object {
      "0": Object {
        "gross": 35,
        "net": 35,
        "tax": 0,
      },
      "19": Object {
        "gross": 98,
        "net": 82.35,
        "tax": 15.65,
      },
    },
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "cancellationItems": Array [],
    "cashback": 0,
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "",
        "id": 1,
        "name": "Cola",
        "originalQuantity": 0,
        "price": 98,
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          null,
        ],
        "vSum": 98,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 98,
            "net": 82.35,
            "tax": 15.65,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "",
        "id": 2,
        "name": "Pepsi",
        "originalQuantity": 0,
        "price": 35,
        "quantity": 0,
        "tax": 0,
        "taxes": Array [
          0,
          null,
        ],
        "vSum": 0,
        "vTakeAway": false,
        "vTaxSum": Object {
          "0": Object {
            "gross": 0,
            "net": 0,
            "tax": 0,
          },
        },
      },
    ],
    "originalOrderId": "ObjectID",
    "payment": Array [],
    "status": "refund",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 98,
    "vTaxSum": Object {
      "0": Object {
        "gross": 0,
        "net": 0,
        "tax": 0,
      },
      "19": Object {
        "gross": 98,
        "net": 82.35,
        "tax": 15.65,
      },
    },
  },
]
`;

exports[`pos-logic case 2a: create Order + addProduct 1`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "cancellationItems": Array [],
            "cashback": 0,
            "items": Array [
              Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": "48",
                "name": "Whiskey",
                "price": 40,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 19,
                "taxes": Array [
                  19,
                  7,
                ],
                "vSum": 40,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "19": Object {
                    "gross": 40,
                    "net": 33.61,
                    "tax": 6.39,
                  },
                },
              },
            ],
            "payment": Array [],
            "status": "inProgress",
            "table": "10",
            "takeAway": false,
            "tip": 0,
            "user": Array [],
            "vDate": "2020-12-31T17:00:00.000Z",
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "createOrder",
          Object {
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`pos-logic case 2b: create Order + add 2 products 1`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "cancellationItems": Array [],
            "cashback": 0,
            "items": Array [
              Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": "48",
                "name": "Whiskey",
                "price": 40,
                "product": "ObjectID",
                "quantity": 2,
                "tax": 19,
                "taxes": Array [
                  19,
                  7,
                ],
                "vSum": 80,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "19": Object {
                    "gross": 80,
                    "net": 67.23,
                    "tax": 12.77,
                  },
                },
              },
            ],
            "payment": Array [],
            "status": "inProgress",
            "table": "10",
            "takeAway": false,
            "tip": 0,
            "user": Array [],
            "vDate": "2020-12-31T17:00:00.000Z",
            "vSum": 80,
            "vTaxSum": Object {
              "19": Object {
                "gross": 80,
                "net": 67.23,
                "tax": 12.77,
              },
            },
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "createOrder",
          Object {
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`pos-logic case 2c: create Order + addModifier 1`] = `
Object {
  "_id": "ObjectID",
  "cancellationItems": Array [],
  "cashback": 0,
  "items": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "48",
      "modifiers": Array [
        Object {
          "name": "Add Ketchup",
          "price": 3,
          "quantity": 1,
        },
      ],
      "name": "Whiskey",
      "price": 40,
      "product": "ObjectID",
      "quantity": 1,
      "tax": 19,
      "taxes": Array [
        19,
        7,
      ],
      "vSum": 43,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 43,
          "net": 36.13,
          "tax": 6.87,
        },
      },
    },
  ],
  "payment": Array [],
  "status": "inProgress",
  "table": "10",
  "takeAway": false,
  "tip": 0,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vSum": 43,
  "vTaxSum": Object {
    "19": Object {
      "gross": 43,
      "net": 36.13,
      "tax": 6.87,
    },
  },
}
`;

exports[`pos-logic case 2d: create Order + removeModifier 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "items._id": "ObjectID",
        },
        Object {
          "$set": Object {
            "items.$": Object {
              "modifiers": Array [],
              "vSum": 40,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 2e: create order + add 2 different items 1`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "cancellationItems": Array [],
            "items": Array [],
            "payment": Array [],
            "status": "inProgress",
            "table": "10",
            "takeAway": false,
            "user": Array [],
            "vDate": "2020-12-31T17:00:00.000Z",
            "vSum": 0,
            "vTaxSum": Object {},
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "createOrder",
          Object {
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "",
                "id": 1,
                "name": "Cola",
                "price": 98,
                "quantity": 1,
                "tax": 19,
                "taxes": Array [
                  19,
                  null,
                ],
                "vSum": 98,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "19": Object {
                    "gross": 98,
                    "net": 82.35,
                    "tax": 15.65,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "vSum": 98,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 98,
                  "net": 82.35,
                  "tax": 15.65,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "",
                "id": 2,
                "name": "Pepsi",
                "price": 35,
                "quantity": 1,
                "tax": 0,
                "taxes": Array [
                  0,
                  null,
                ],
                "vSum": 35,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "0": Object {
                    "gross": 35,
                    "net": 35,
                    "tax": 0,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "vSum": 133,
              "vTaxSum": Object {
                "0": Object {
                  "gross": 35,
                  "net": 35,
                  "tax": 0,
                },
                "19": Object {
                  "gross": 98,
                  "net": 82.35,
                  "tax": 15.65,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`pos-logic case 2f: load order + load order 1`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {},
          Object {
            "$pull": Object {
              "items": Object {
                "_id": "ObjectID",
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {},
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`pos-logic case 3: updateItem 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "items._id": "ObjectID",
        },
        Object {
          "$set": Object {
            "items.$": Object {
              "course": 3,
              "quantity": 10,
              "vSum": 400,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 400,
                  "net": 336.13,
                  "tax": 63.87,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 400,
            "vTaxSum": Object {
              "19": Object {
                "gross": 400,
                "net": 336.13,
                "tax": 63.87,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 4: discount 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "cancellationItems": Array [],
          "items": Array [],
          "payment": Array [],
          "status": "inProgress",
          "table": "10",
          "takeAway": false,
          "user": Array [],
          "vDate": "2020-12-31T17:00:00.000Z",
          "vSum": 0,
          "vTaxSum": Object {},
        },
      ],
      "fn": "create",
    },
    Object {
      "args": Array [
        "createOrder",
        Object {
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "items._id": "ObjectID",
        },
        Object {
          "$set": Object {
            "items.$": Object {
              "discount": "50%",
              "originalPrice": 40,
              "price": 20,
              "vDiscount": 20,
              "vSum": 20,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 20,
                  "net": 16.81,
                  "tax": 3.19,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "discount": "50%",
            "vDiscount": 20,
            "vSum": 20,
            "vTaxSum": Object {
              "19": Object {
                "gross": 20,
                "net": 16.81,
                "tax": 3.19,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 4: discount 2`] = `
Object {
  "_id": "ObjectID",
  "cancellationItems": Array [],
  "discount": "50%",
  "items": Array [
    Object {
      "discount": "50%",
      "originalPrice": 40,
      "price": 20,
      "vDiscount": 20,
      "vSum": 20,
      "vTaxSum": Object {
        "19": Object {
          "gross": 20,
          "net": 16.81,
          "tax": 3.19,
        },
      },
    },
  ],
  "payment": Array [],
  "status": "inProgress",
  "table": "10",
  "takeAway": false,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vDiscount": 20,
  "vSum": 20,
  "vTaxSum": Object {
    "19": Object {
      "gross": 20,
      "net": 16.81,
      "tax": 3.19,
    },
  },
}
`;

exports[`pos-logic case 5: change course 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "cancellationItems": Array [],
          "items": Array [],
          "payment": Array [],
          "status": "inProgress",
          "table": "10",
          "takeAway": false,
          "user": Array [],
          "vDate": "2020-12-31T17:00:00.000Z",
          "vSum": 0,
          "vTaxSum": Object {},
        },
      ],
      "fn": "create",
    },
    Object {
      "args": Array [
        "createOrder",
        Object {
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "items._id": "ObjectID",
        },
        Object {
          "$set": Object {
            "items.$": Object {
              "course": 0,
              "separate": false,
              "takeAway": true,
              "tax": 7,
              "vTakeAway": true,
              "vTaxSum": Object {
                "7": Object {
                  "gross": 40,
                  "net": 37.38,
                  "tax": 2.62,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vTaxSum": Object {
              "7": Object {
                "gross": 40,
                "net": 37.38,
                "tax": 2.62,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 6: removeItem 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$pull": Object {
            "items": Object {
              "_id": "ObjectID",
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "cancellationItems": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 0,
            "vTaxSum": Object {},
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 11: factory test 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "cancellationItems": Array [],
          "items": Array [],
          "payment": Array [],
          "status": "inProgress",
          "table": "10",
          "takeAway": false,
          "user": Array [],
          "vDate": "2020-12-31T17:00:00.000Z",
          "vSum": 0,
          "vTaxSum": Object {},
        },
      ],
      "fn": "create",
    },
    Object {
      "args": Array [
        "createOrder",
        Object {
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 12 a: split order one time snapshot 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "cancellationItems": Array [],
          "items": Array [],
          "payment": Array [],
          "splitId": "4a784001-4bc4-11eb-bbfc-fb848d2c0894",
          "status": "inProgress",
          "table": "10",
          "takeAway": false,
          "user": Array [],
          "vDate": "2020-12-31T17:00:00.000Z",
          "vSum": 0,
          "vTaxSum": Object {},
        },
      ],
      "fn": "create",
    },
    Object {
      "args": Array [
        "createOrder",
        Object {
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 2,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 80,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 80,
                  "net": 67.23,
                  "tax": 12.77,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 80,
            "vTaxSum": Object {
              "19": Object {
                "gross": 80,
                "net": 67.23,
                "tax": 12.77,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 12 b: split order 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "splitId": "4a784001-4bc4-11eb-ac65-830994817053",
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 40,
    "vTaxSum": Object {
      "19": Object {
        "gross": 40,
        "net": 33.61,
        "tax": 6.39,
      },
    },
  },
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [],
    "payment": Array [],
    "splitId": "4a784001-4bc4-11eb-ac65-830994817053",
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 0,
    "vTaxSum": Object {},
  },
]
`;

exports[`pos-logic case 12 b: split order 2`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
          "cancellationItems": Array [],
          "items": Array [],
          "payment": Array [],
          "splitId": "4a784001-4bc4-11eb-ac65-830994817053",
          "status": "inProgress",
          "table": "10",
          "takeAway": false,
          "user": Array [],
          "vDate": "2020-12-31T17:00:00.000Z",
          "vSum": 0,
          "vTaxSum": Object {},
        },
      ],
      "fn": "create",
    },
    Object {
      "args": Array [
        "createOrder",
        Object {
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 40,
            "vTaxSum": Object {
              "19": Object {
                "gross": 40,
                "net": 33.61,
                "tax": 6.39,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$pull": Object {
            "items": Object {
              "_id": "ObjectID",
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 0,
            "vTaxSum": Object {},
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 12: split order: cancel 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 3,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 120,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 120,
            "net": 100.84,
            "tax": 19.16,
          },
        },
      },
    ],
    "payment": Array [],
    "splitId": "4a784001-4bc4-11eb-bd0d-413665d061ac",
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 40,
    "vTaxSum": Object {
      "19": Object {
        "gross": 40,
        "net": 33.61,
        "tax": 6.39,
      },
    },
  },
  Object {
    "cancellationItems": Array [],
    "items": Array [],
    "payment": Array [],
    "user": Array [],
  },
]
`;

exports[`pos-logic case 13 a: move items : inProgress order 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 4,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 160,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 160,
            "net": 134.45,
            "tax": 25.55,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "15",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 160,
    "vTaxSum": Object {
      "19": Object {
        "gross": 160,
        "net": 134.45,
        "tax": 25.55,
      },
    },
  },
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "printed": true,
        "product": "ObjectID",
        "quantity": 3,
        "sent": true,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 120,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 120,
            "net": 100.84,
            "tax": 19.16,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 160,
    "vTaxSum": Object {
      "19": Object {
        "gross": 160,
        "net": 134.45,
        "tax": 25.55,
      },
    },
  },
]
`;

exports[`pos-logic case 13 a: move items : inProgress order 2`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$push": Object {
            "items": Object {
              "_id": "ObjectID",
              "course": 1,
              "groupPrinter": "Bar",
              "id": "48",
              "name": "Whiskey",
              "price": 40,
              "product": "ObjectID",
              "quantity": 1,
              "tax": 19,
              "taxes": Array [
                19,
                7,
              ],
              "vSum": 40,
              "vTakeAway": false,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
  Array [
    Object {
      "args": Array [
        Object {
          "_id": "ObjectID",
        },
        Object {
          "$set": Object {
            "vSum": 160,
            "vTaxSum": Object {
              "19": Object {
                "gross": 160,
                "net": 134.45,
                "tax": 25.55,
              },
            },
          },
        },
      ],
      "fn": "findOneAndUpdate",
    },
    Object {
      "args": Array [
        "updateActiveOrder",
        Object {
          "orderId": "ObjectID",
          "table": "10",
        },
      ],
      "fn": "commit",
    },
  ],
]
`;

exports[`pos-logic case 14a: create Order + addProduct + togglePrint + printToKitchen 1`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "cancellationItems": Array [],
            "items": Array [],
            "payment": Array [],
            "status": "inProgress",
            "table": "10",
            "takeAway": false,
            "user": Array [],
            "vDate": "2020-12-31T17:00:00.000Z",
            "vSum": 0,
            "vTaxSum": Object {},
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "createOrder",
          Object {
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Kitchen",
                "id": "48",
                "name": "Whiskey",
                "price": 40,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 19,
                "taxes": Array [
                  19,
                  7,
                ],
                "vSum": 40,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "19": Object {
                    "gross": 40,
                    "net": 33.61,
                    "tax": 6.39,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "_id": "ObjectID",
              "vSum": 40,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`pos-logic case 14a: create Order + addProduct + togglePrint + printToKitchen 2`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "cancellationItems": Array [],
            "items": Array [],
            "payment": Array [],
            "status": "inProgress",
            "table": "10",
            "takeAway": false,
            "user": Array [],
            "vDate": "2020-12-31T17:00:00.000Z",
            "vSum": 0,
            "vTaxSum": Object {},
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "createOrder",
          Object {
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Kitchen",
                "id": "48",
                "name": "Whiskey",
                "price": 40,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 19,
                "taxes": Array [
                  19,
                  7,
                ],
                "vSum": 40,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "19": Object {
                    "gross": 40,
                    "net": 33.61,
                    "tax": 6.39,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "_id": "ObjectID",
              "vSum": 40,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
            "table": "10",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "order": Object {
              "_id": "ObjectID",
              "cancellationItems": Array [],
              "items": Array [
                Object {
                  "_id": "ObjectID",
                  "course": 1,
                  "groupPrinter": "Kitchen",
                  "id": "48",
                  "name": "Whiskey",
                  "price": 40,
                  "product": "ObjectID",
                  "quantity": 1,
                  "tax": 19,
                  "taxes": Array [
                    19,
                    7,
                  ],
                  "vSum": 40,
                  "vTakeAway": false,
                  "vTaxSum": Object {
                    "19": Object {
                      "gross": 40,
                      "net": 33.61,
                      "tax": 6.39,
                    },
                  },
                },
              ],
              "payment": Array [],
              "status": "inProgress",
              "table": "10",
              "takeAway": false,
              "user": Array [],
              "vDate": "2020-12-31T17:00:00.000Z",
              "vSum": 40,
              "vTaxSum": Object {
                "19": Object {
                  "gross": 40,
                  "net": 33.61,
                  "tax": 6.39,
                },
              },
            },
            "printType": "kitchenAdd",
          },
        ],
        "fn": "create",
      },
      Object {
        "args": Array [
          "print",
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Action",
  },
]
`;

exports[`pos-logic case 14a: create Order + addProduct + togglePrint + printToKitchen 3`] = `
Object {
  "_id": "ObjectID",
  "order": Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 40,
    "vTaxSum": Object {
      "19": Object {
        "gross": 40,
        "net": 33.61,
        "tax": 6.39,
      },
    },
  },
  "printType": "kitchenAdd",
}
`;

exports[`pos-logic case 14a: create Order + addProduct + togglePrint + printToKitchen 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 40,
    "vTaxSum": Object {
      "19": Object {
        "gross": 40,
        "net": 33.61,
        "tax": 6.39,
      },
    },
  },
]
`;

exports[`pos-logic case 14a: create Order + addProduct + togglePrint + printToKitchen 5`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"items\\":[],\\"cancellationItems\\":[],\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":0,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{}}]}]",
    "collectionName": "Order",
    "condition": "null",
    "data": Object {
      "docId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 1,
    "tags": Array [
      "createOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":40,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 2,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"_id\\":\\"ObjectID\\",\\"vSum\\":40,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 3,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"printType\\":\\"kitchenAdd\\",\\"order\\":{\\"items\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":40,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}],\\"cancellationItems\\":[],\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":40,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}}]}]",
    "collectionName": "Action",
    "condition": "null",
    "data": Object {
      "printFromMaster": true,
    },
    "fromMaster": true,
    "id": 4,
    "tags": Array [
      "print",
    ],
    "uuid": "uuid-v1",
  },
]
`;

exports[`pos-logic case 15a: print to kitchen 1`] = `Array []`;

exports[`pos-logic case 15a: print to kitchen 2`] = `
Object {
  "_id": "ObjectID",
  "device": "Terminal 1",
  "order": Object {
    "_id": "ObjectID",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "cashback": 0,
    "date": "2021-01-01T00:00:00.000Z",
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 43,
    "vTaxSum": Object {
      "19": Object {
        "gross": 43,
        "net": 36.13,
        "tax": 6.87,
      },
    },
  },
  "printType": "kitchen",
  "recent": Object {
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
  },
}
`;

exports[`pos-logic case 15a: print to kitchen 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "cashback": 0,
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
    "payment": Array [],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 43,
    "vTaxSum": Object {
      "19": Object {
        "gross": 43,
        "net": 36.13,
        "tax": 6.87,
      },
    },
  },
]
`;

exports[`pos-logic case 15a: print to kitchen 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"items\\":[],\\"cancellationItems\\":[],\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":0,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{},\\"tip\\":0,\\"cashback\\":0}]}]",
    "collectionName": "Order",
    "condition": "null",
    "data": Object {
      "docId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 1,
    "tags": Array [
      "createOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"items.$.vSum\\":86,\\"items.$.vTakeAway\\":false,\\"items.$.tax\\":19,\\"items.$.vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 2,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":86,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 3,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 4,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":86,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}},\\"tip\\":0,\\"cashback\\":0}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 5,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.quantity\\":1,\\"items.$.vSum\\":43,\\"items.$.vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 6,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"cancellationItems\\":{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 7,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":43,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 8,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$[].sent\\":true,\\"items.$[].printed\\":true,\\"cancellationItems.$[].sent\\":true,\\"cancellationItems.$[].printed\\":true}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
    },
    "fromMaster": true,
    "id": 9,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"printType\\":\\"kitchen\\",\\"order\\":{\\"items\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":43,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}],\\"cancellationItems\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}],\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":43,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}},\\"tip\\":0,\\"cashback\\":0,\\"date\\":\\"2021-01-01T00:00:00.000Z\\"},\\"device\\":\\"Terminal 1\\",\\"recent\\":{\\"items\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":43,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}],\\"cancellationItems\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}],\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}]}}]}]",
    "collectionName": "Action",
    "condition": "null",
    "data": Object {
      "printFromMaster": true,
    },
    "fromMaster": true,
    "id": 10,
    "tags": Array [
      "print",
    ],
    "uuid": "uuid-v1",
  },
]
`;

exports[`pos-logic case 15b: pay 1`] = `Array []`;

exports[`pos-logic case 15b: pay 2`] = `
Object {
  "_id": "ObjectID",
  "device": "Terminal 1",
  "order": Object {
    "_id": "ObjectID",
    "bookingNumber": "210101070000000",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "cashback": 5,
    "date": "2021-01-01T00:00:00.000Z",
    "id": 1,
    "immediatePay": true,
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
    "multiPayment": false,
    "payment": Array [
      Object {
        "type": "cash",
        "value": 48,
      },
    ],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 43,
    "vTaxSum": Object {
      "19": Object {
        "gross": 43,
        "net": 36.13,
        "tax": 6.87,
      },
    },
  },
  "printType": "invoice",
  "recent": Object {
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
  },
}
`;

exports[`pos-logic case 15b: pay 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 86,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 86,
            "net": 72.27,
            "tax": 13.73,
          },
        },
      },
    ],
    "cashback": 5,
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Kitchen",
        "id": "48",
        "modifiers": Array [
          Object {
            "name": "Add Ketchup",
            "price": 3,
            "quantity": 1,
          },
        ],
        "name": "Whiskey",
        "price": 40,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 43,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 43,
            "net": 36.13,
            "tax": 6.87,
          },
        },
      },
    ],
    "multiPayment": false,
    "payment": Array [
      Object {
        "type": "cash",
        "value": 48,
      },
    ],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 43,
    "vTaxSum": Object {
      "19": Object {
        "gross": 43,
        "net": 36.13,
        "tax": 6.87,
      },
    },
  },
]
`;

exports[`pos-logic case 15b: pay 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"items\\":[],\\"cancellationItems\\":[],\\"payment\\":[],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":0,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{},\\"tip\\":0,\\"cashback\\":0}]}]",
    "collectionName": "Order",
    "condition": "null",
    "data": Object {
      "docId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 1,
    "tags": Array [
      "createOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"vSum\\":80,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":12.77,\\"net\\":67.23,\\"gross\\":80}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 2,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":80,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":12.77,\\"net\\":67.23,\\"gross\\":80}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 3,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.vSum\\":86,\\"items.$.vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}},\\"items.$.modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 4,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":86,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 5,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.quantity\\":1,\\"items.$.vSum\\":43,\\"items.$.vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 6,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"cancellationItems\\":{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}},\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 7,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":43,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 8,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"payment\\":[{\\"type\\":\\"cash\\",\\"value\\":48}],\\"cashback\\":5,\\"multiPayment\\":false}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": "10",
    },
    "fromMaster": true,
    "id": 9,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"printType\\":\\"invoice\\",\\"order\\":{\\"items\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":43,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}},\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}],\\"cancellationItems\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}},\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}],\\"payment\\":[{\\"type\\":\\"cash\\",\\"value\\":48}],\\"user\\":[],\\"table\\":\\"10\\",\\"_id\\":\\"ObjectID\\",\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"vSum\\":43,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}},\\"tip\\":0,\\"cashback\\":5,\\"multiPayment\\":false,\\"date\\":\\"2021-01-01T00:00:00.000Z\\",\\"immediatePay\\":true,\\"id\\":1,\\"bookingNumber\\":\\"210101070000000\\"},\\"device\\":\\"Terminal 1\\",\\"recent\\":{\\"items\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":43,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.87,\\"net\\":36.13,\\"gross\\":43}},\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}],\\"cancellationItems\\":[{\\"groupPrinter\\":\\"Kitchen\\",\\"id\\":\\"48\\",\\"name\\":\\"Whiskey\\",\\"price\\":40,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":86,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":13.73,\\"net\\":72.27,\\"gross\\":86}},\\"modifiers\\":[{\\"name\\":\\"Add Ketchup\\",\\"price\\":3,\\"quantity\\":1}]}]}}]}]",
    "collectionName": "Action",
    "condition": "null",
    "data": Object {
      "printFromMaster": true,
    },
    "fromMaster": true,
    "id": 10,
    "tags": Array [
      "print",
    ],
    "uuid": "uuid-v1",
  },
]
`;

exports[`pos-logic case 16: split order intergrate 1`] = `
Array [
  Object {
    "_id": "0000000000000000000007cf",
    "cancellationItems": Array [],
    "cashback": 0,
    "items": Array [
      Object {
        "_id": "0000000000000000000007d1",
        "course": 1,
        "name": "Fanta",
        "price": 2,
        "quantity": 1,
        "tax": 16,
        "taxes": Array [
          16,
          32,
        ],
        "vSum": 2,
        "vTakeAway": false,
        "vTaxSum": Object {
          "16": Object {
            "gross": 2,
            "net": 1.72,
            "tax": 0.28,
          },
        },
      },
    ],
    "payment": Array [
      Object {
        "type": "cash",
        "value": 1.3,
      },
    ],
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": 2020-12-31T17:00:00.000Z,
    "vSum": 2,
    "vTaxSum": Object {
      "16": Object {
        "gross": 2,
        "net": 1.72,
        "tax": 0.28,
      },
    },
  },
  Object {
    "_id": "0000000000000000000007d2",
    "bookingNumber": "210101070000000",
    "cancellationItems": Array [],
    "cashback": 0,
    "date": 2021-01-01T00:00:00.000Z,
    "id": 1,
    "items": Array [
      Object {
        "_id": "0000000000000000000007d3",
        "course": 1,
        "name": "Cola",
        "price": 1.3,
        "quantity": 1,
        "tax": 16,
        "taxes": Array [
          16,
          32,
        ],
        "vSum": 1.3,
        "vTakeAway": false,
        "vTaxSum": Object {
          "16": Object {
            "gross": 1.3,
            "net": 1.12,
            "tax": 0.18,
          },
        },
      },
    ],
    "multiPayment": false,
    "payment": Array [
      Object {
        "type": "cash",
        "value": 1.3,
      },
    ],
    "splitId": "4a784001-4bc4-11eb-a273-a7b8ef82044c",
    "status": "inProgress",
    "table": "10",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": 2020-12-31T17:00:00.000Z,
    "vSum": 1.3,
    "vTaxSum": Object {
      "16": Object {
        "gross": 1.3,
        "net": 1.12,
        "tax": 0.18,
      },
    },
  },
]
`;

exports[`pos-logic case 17a: refund order 1`] = `
Object {
  "_id": "ObjectID",
  "cancellationItems": Array [],
  "cashback": 0,
  "items": Array [
    Object {
      "_id": "ObjectID",
      "category": "ObjectID",
      "course": 1,
      "id": 1,
      "layouts": Array [
        Object {
          "color": "#FBE4EC",
          "device": "pos",
          "order": 0,
        },
      ],
      "maxQuantity": 5,
      "name": "Cola",
      "option": Object {
        "favorite": true,
      },
      "originalQuantity": 0,
      "price": 98,
      "quantity": 0,
      "tax": 19,
      "vSum": 0,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 0,
          "net": 0,
          "tax": 0,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "category": "ObjectID",
      "course": 1,
      "id": 2,
      "layouts": Array [
        Object {
          "color": "#FBE4EC",
          "device": "pos",
          "order": 1,
        },
      ],
      "maxQuantity": 10,
      "name": "Pepsi",
      "option": Object {
        "favorite": true,
      },
      "originalQuantity": 0,
      "price": 35,
      "quantity": 0,
      "tax": 0,
      "vSum": 0,
      "vTakeAway": false,
      "vTaxSum": Object {
        "0": Object {
          "gross": 0,
          "net": 0,
          "tax": 0,
        },
      },
    },
  ],
  "originalOrderId": "ObjectID",
  "payment": Array [],
  "status": "refund",
  "takeAway": false,
  "tip": 0,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vSum": 0,
  "vTaxSum": Object {
    "0": Object {
      "gross": 0,
      "net": 0,
      "tax": 0,
    },
    "19": Object {
      "gross": 0,
      "net": 0,
      "tax": 0,
    },
  },
}
`;
